[MD Bookmarks] Add UI for Material Bookmarks.

This CL adds the basic UI for the material design bookmark manager.
- list.html is the list of bookmarks.
- sidebar.html contains the folder tree.

BUG=651980
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2603303002
Cr-Commit-Position: refs/heads/master@{#441325}

Former-commit-id: ab33b38dd1014114876adbcd70bcea76d5b1e614